- PIP-64 PIP-65 Naprawiono zapisywanie ustawień, dodano zasób walidujący konfigurację
- PIP-65 Refactoring
- PIP-66 Zmieniono pole project
- PIP-87 Dodano pola Daty oraz Wersji + małe poprawki w bundle
- PIP-87 Dodanie pliku calendar.css
- PIP-49 Naprawione błąd powodujący NPE
- PIP-99 Poprawienie tytułu i dodanie opisu dla pola
- PIP-100 Dodanie walidacji na połączone pole Data i Poprzednie dni + usunięcie linku do nikąd z tytułu gadżetu
- PIP-63 Utworzono serwis wyszukujący
- PIP-75 Utworzono pole multiselect zawierające statusy
- PIP-102 Refaktoring + usunięcie zbędnych zasobów REST
- PIP-97 Dodano brakujące pola oraz odpowiednie modyfikacje backendu, min. REST pozwalający na testowanie usługi wyszukiwania
- PIP-97 Drobna poprawka
- PIP-118 Dodanie usługi chart
- PIP-125 Walidacja dni
- PIP-130 Walidacja pola issue + zmieniona metoda grupowania statusów + mały refactoring
- PIP-140 Spring skonfigurowany
- PIP-134 Dodano licencje + usunięto puste testy jednostkowe
- PIP-110 Interwał odświeżania poprawiony
- PIP-125 Walidacja daty
- PIP-143 Podwaliny pola multiselect
- PIP-143 Przerzucenie select.min.2 js i css do resource oraz zmiania Ivo tyczy się już tylko pól od Issue.
- Refactoring treści etykiet, opisów i błędów.
- PIP-147 Naprawiono wyświetlanie chart
- PIP-118 Naprawiono chart + minimalny refaktoring
- PIP-148 Dodano tryb zmaksymalizowany
- PIP-148 Poprawiono error w trybie zmaksymalizowanym
- PIP-148 Pierwsza wersja tabelki
- PIP-148 Druga wersja tabelki + optymalizacja rest
- PIP-118 Poprawki podliczania elementów chartu + refactoring
- Naprawa konfliktów z merge jarek -> development
- PIP-150 Dodano listener zmieniający rozmiar gadżetu przy wyborze statusu
- PIP-131 Stworzono pole ProjectOrFilter
- PIP-152 Poprawiono warunki dotyczące wyboru wersji
- PIP-165 Nazwa projektu już pojawia się w widoku konfiguracji + poprawiono obsługę wyjątków w usłudze chart + refaktoring