@@ -16,6 +16,7 @@
 
 package net.amg.jira.plugins.jhz.model;
 
+import com.atlassian.jira.charts.ChartFactory;
 import net.amg.jira.plugins.jhz.rest.model.ErrorCollection;
 import net.amg.jira.plugins.jhz.rest.model.ValidationError;
 
@@ -42,6 +43,7 @@ public enum FormField {
             }
         }
     }, ISSUES("Issues") {
+        @Override
         public void validate(ErrorCollection errorCollection, String value) {
             if (value == null || value.isEmpty()) {
                 errorCollection.addValidationError(new ValidationError(FormField.ISSUES.fieldName,
@@ -52,6 +54,7 @@ public enum FormField {
             }
         }
     }, DATE("Date") {
+        @Override
         public void validate(ErrorCollection errorCollection, String value) {
             if (value == null || value.isEmpty()) {
                 errorCollection.addValidationError(new ValidationError(FormField.DATE.fieldName,
@@ -64,7 +67,6 @@ public enum FormField {
                     if (datePattern.matcher(value).matches()) {
                         Calendar today = Calendar.getInstance();
                         Calendar setDate = Calendar.getInstance();
-                        SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
 
                         if (value.charAt(4) == '/' || value.charAt(4) == '.' ||
                                 value.charAt(7) == '/' || value.charAt(7) == '.') {
@@ -72,7 +74,7 @@ public enum FormField {
                         }
 
                         try {
-                            setDate.setTime(sdf.parse(value));
+                            setDate.setTime(simpleDateFormat.parse(value));
                         } catch (ParseException e) {
                             errorCollection.addValidationError(new ValidationError(FormField.DATE.fieldName,
                                     ERROR_PREFIX + "noWay"));
@@ -93,20 +95,38 @@ public enum FormField {
             }
         }
     }, PERIOD("Period") {
+        @Override
         public void validate(ErrorCollection errorCollection, String value) {
             if (value == null || value.isEmpty()) {
                 errorCollection.addValidationError(new ValidationError(FormField.PERIOD.fieldName,
                         ERROR_PREFIX + EMPTY_FIELD));
             }
         }
+    }, VERSION("Version") {
+        @Override
+        public void validate(ErrorCollection errorCollection, String value) {
+            if (value == null || value.isEmpty()) {
+                errorCollection.addValidationError(new ValidationError(FormField.VERSION.fieldName,
+                        ERROR_PREFIX + EMPTY_FIELD));
+            } else {
+                try {
+                    ChartFactory.VersionLabel.valueOf(value);
+                } catch (IllegalArgumentException ex) {
+                    errorCollection.addValidationError(new ValidationError(FormField.VERSION.fieldName,
+                            ERROR_PREFIX + "invalidValue"));
+                }
+            }
+        }
     };
 
-    private static final String ERROR_PREFIX = "issues.history.gadget.errors.";
-    private static final String EMPTY_FIELD = "emptyField";
+    private final static String ERROR_PREFIX = "issues.history.gadget.errors.";
+    private final static String EMPTY_FIELD = "emptyField";
+    private final static SimpleDateFormat simpleDateFormat = new SimpleDateFormat("yyyy-MM-dd");
     public static final Pattern daysBackPattern = Pattern.compile("^-?([0-9][0-9]?|[12][0-9][0-9]|3[0-5][0-9]|36[0-5])d$", Pattern.CASE_INSENSITIVE);
     public static final Pattern datePattern = Pattern.compile("^[1-2]\\d{3}[/\\-[.]](0[1-9]|1[012])[/\\-[.]](0[1-9]|[12][0-9]|3[01])$", Pattern.CASE_INSENSITIVE);
     public static final Pattern projectPattern = Pattern.compile("(project-|filter-)\\d+", Pattern.CASE_INSENSITIVE);
     public static final Pattern issuesPattern = Pattern.compile("[aA-zZ\\s]+\\d+((\\|[aA-zZ\\s]+\\d+)?)*", Pattern.CASE_INSENSITIVE);
+
     private final String fieldName;
 
     private FormField(String fieldName) {
